Changes not yet released
========================

* Fix DeprecationWarning: the sets module is deprecated.

* Use gtk.StatusIcon if egg.trayicon is not available
  (https://bugs.launchpad.net/gtimelog/+bug/209798).


Changes in version 0.2.5
========================

* Don't open a console window on Windows.

* Moved the primary GTimeLog source repository to Bazaar hosted on Launchpad.


Changes in version 0.2.4
========================

* Show time spent at the office
  (https://bugs.launchpad.net/gtimelog/+bug/238515).
* Closing the main window minimizes GTimeLog to the system tray
  (https://bugs.launchpad.net/gtimelog/+bug/239271)
* Ability to time-offset new log item
  (https://bugs.launchpad.net/bugs/291356)


Changes in version 0.2.3
========================

* Fix duplicates in the completion popup after you reload the log file
  (https://bugs.launchpad.net/gtimelog/+bug/238505).
* Change status to Beta in setup.py -- while I still consider it to be
  less polished than it should, there are people who find it useful already.


Changes in version 0.2.2
========================

* Tweak setup.py to get a sane page at http://pypi.python.org/pypi/gtimelog/


Changes in version 0.2.1
========================

* Entries with `***` are skipped from reports (bug 209750)
* Help -> Online Documentation opens a browser with some help (bug 209754)
* View -> Tasks allows you to hide the Tasks pane (bug 220773)


Changes in version 0.2.0
========================

* Reorganize the source tree properly.
* Bump intermediate revision number to celebrate.


Changes in version 0.0.85
=========================

* First setuptools-based release (`easy_install gtimelog` now works).


Changes in older versions
=========================

You'll have to dig through Subversion logs to discover those, if you're really
that interested: http://mg.pov.lt/gtimelog/trac/log
